k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: app
        image: ghcr.io/shnipped/electronic_ref_front:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-secret
